--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ target/
 
 ### Ignore secretclass ###
 src/main/java/in/edu/kristujayanti/secretclass.java
+src/main/resources/awsconfig.properties
 
 ### Eclipse ###
 .apt_generated
